[gd_scene load_steps=24 format=3 uid="uid://dxd5lws1d1i50"]

[ext_resource type="Script" path="res://Viewer.gd" id="1_8as3u"]
[ext_resource type="Script" path="res://UI/ZoomWidget.gd" id="2_hhjub"]
[ext_resource type="Texture2D" uid="uid://tgx8dgdmqk51" path="res://Assets/icons/ViewportZoom.svg" id="3_xy41m"]
[ext_resource type="Script" path="res://AxisDisplay.gd" id="4_1awhe"]
[ext_resource type="Texture2D" uid="uid://bqxacuclc0wm2" path="res://Assets/icons/Pause.svg" id="4_bjlnw"]
[ext_resource type="Texture2D" uid="uid://con66ii2e2wky" path="res://Assets/icons/Play.svg" id="5_1f57i"]
[ext_resource type="Script" path="res://addons/draw3d/draw_3d.gd" id="5_atfcx"]
[ext_resource type="Texture2D" uid="uid://cdjnp3kgdtejs" path="res://Assets/icons/Loop.svg" id="6_bamat"]
[ext_resource type="Script" path="res://CameraGimbal.gd" id="6_nfjb0"]
[ext_resource type="Theme" uid="uid://cruxx3e5vp4eb" path="res://UI/AccentButton.theme" id="8_hcu5c"]
[ext_resource type="Script" path="res://UI/LoopModeButton.gd" id="8_j8anv"]
[ext_resource type="Texture2D" uid="uid://crxns5afq52rt" path="res://Assets/icons/orientation_global.svg" id="8_jtsbj"]
[ext_resource type="Texture2D" uid="uid://co4bd0c06nrlm" path="res://Assets/icons/PlaneMesh.svg" id="9_83pvv"]
[ext_resource type="Texture2D" uid="uid://bvdl6gkba822v" path="res://Assets/icons/BoxMesh.svg" id="10_21ngp"]
[ext_resource type="Texture2D" uid="uid://cwyhr0vf7we1o" path="res://Assets/icons/view-refresh-symbolic.svg" id="11_l7fma"]
[ext_resource type="Texture2D" uid="uid://dqqwfn45nrjyb" path="res://Assets/textures/texture_03.png" id="14_72wny"]
[ext_resource type="PackedScene" uid="uid://smcg1m46v6kk" path="res://MyWorldEnvironment.tscn" id="18_uk3t5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qsj3g"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0ckg"]
bg_color = Color(0.431373, 0.431373, 0.431373, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_feogs"]
bg_color = Color(0.439216, 0.729412, 0.980392, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_s0e7s"]
albedo_texture = ExtResource("14_72wny")
uv1_triplanar = true

[sub_resource type="PlaneMesh" id="PlaneMesh_5fgvt"]
material = SubResource("StandardMaterial3D_s0e7s")
size = Vector2(10000, 10000)

[sub_resource type="ImmediateMesh" id="ImmediateMesh_hc5fl"]

[node name="Viewer" type="Node3D"]
script = ExtResource("1_8as3u")

[node name="WorldEnvironment" parent="." instance=ExtResource("18_uk3t5")]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
light_energy = 0.729
shadow_enabled = true

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="UILayer"]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_qsj3g")

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer/PanelContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UILayer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ZoomWidget" type="VBoxContainer" parent="UILayer/PanelContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_hhjub")

[node name="ZoomBar" type="ProgressBar" parent="UILayer/PanelContainer/VBoxContainer/MarginContainer/ZoomWidget"]
custom_minimum_size = Vector2(10, 250)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_d0ckg")
theme_override_styles/fill = SubResource("StyleBoxFlat_feogs")
value = 100.0
fill_mode = 3
show_percentage = false

[node name="TextureRect" type="TextureRect" parent="UILayer/PanelContainer/VBoxContainer/MarginContainer/ZoomWidget"]
modulate = Color(0.439216, 0.729412, 0.980392, 1)
layout_mode = 2
texture = ExtResource("3_xy41m")
stretch_mode = 2

[node name="ZoomLevel" type="Label" parent="UILayer/PanelContainer/VBoxContainer/MarginContainer/ZoomWidget"]
layout_mode = 2
theme_override_colors/font_color = Color(0.439216, 0.729412, 0.980392, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12

[node name="HideTimer" type="Timer" parent="UILayer/PanelContainer/VBoxContainer/MarginContainer/ZoomWidget"]
wait_time = 2.0
one_shot = true

[node name="AnimationBar" type="MarginContainer" parent="UILayer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -105.0
offset_top = -50.0
offset_right = 105.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer2" type="PanelContainer" parent="UILayer/AnimationBar"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="UILayer/AnimationBar/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="UILayer/AnimationBar/PanelContainer2/MarginContainer"]
layout_mode = 2

[node name="AnimationListUI" type="OptionButton" parent="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "Choose Animation"
focus_mode = 0

[node name="AnimationPlayButton" type="TextureButton" parent="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Play/Pause Animation"
toggle_mode = true
texture_normal = ExtResource("5_1f57i")
texture_pressed = ExtResource("4_bjlnw")
stretch_mode = 3

[node name="PlayBar" type="HScrollBar" parent="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "Seek Time"

[node name="PlayTime" type="Label" parent="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="LoopModeButton" type="Button" parent="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
icon = ExtResource("6_bamat")
script = ExtResource("8_j8anv")

[node name="MarginContainer" type="MarginContainer" parent="UILayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -115.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="PanelContainer2" type="PanelContainer" parent="UILayer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="SupportPivotDisplay" type="VBoxContainer" parent="UILayer/MarginContainer/PanelContainer2"]
layout_mode = 2

[node name="AxisButton" type="Button" parent="UILayer/MarginContainer/PanelContainer2/SupportPivotDisplay"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Toggle Coordinate Axis"
focus_mode = 0
theme = ExtResource("8_hcu5c")
toggle_mode = true
button_pressed = true
icon = ExtResource("8_jtsbj")
icon_alignment = 1

[node name="GroundButton" type="Button" parent="UILayer/MarginContainer/PanelContainer2/SupportPivotDisplay"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Toggle Ground Plane"
focus_mode = 0
theme = ExtResource("8_hcu5c")
toggle_mode = true
button_pressed = true
icon = ExtResource("9_83pvv")
icon_alignment = 1

[node name="BoundingBoxButton" type="Button" parent="UILayer/MarginContainer/PanelContainer2/SupportPivotDisplay"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
tooltip_text = "Toggle Bounding Box"
focus_mode = 0
theme = ExtResource("8_hcu5c")
toggle_mode = true
button_pressed = true
icon = ExtResource("10_21ngp")
icon_alignment = 1

[node name="ResetViewButton" type="Button" parent="UILayer/MarginContainer/PanelContainer2/SupportPivotDisplay"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
focus_mode = 0
theme = ExtResource("8_hcu5c")
icon = ExtResource("11_l7fma")
icon_alignment = 1

[node name="LoadedObject" type="Node3D" parent="."]

[node name="GroundPlane" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.01, 0)
mesh = SubResource("PlaneMesh_5fgvt")

[node name="BoundingBox" type="Node3D" parent="."]

[node name="AxisDisplay" type="Node3D" parent="."]
script = ExtResource("4_1awhe")

[node name="MeshInstance" type="MeshInstance3D" parent="AxisDisplay"]
cast_shadow = 0
mesh = SubResource("ImmediateMesh_hc5fl")
script = ExtResource("5_atfcx")

[node name="CameraGimbal" type="Node3D" parent="."]
script = ExtResource("6_nfjb0")

[node name="InnerGimbal" type="Node3D" parent="CameraGimbal"]

[node name="Camera" type="Camera3D" parent="CameraGimbal/InnerGimbal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)

[connection signal="timeout" from="UILayer/PanelContainer/VBoxContainer/MarginContainer/ZoomWidget/HideTimer" to="UILayer/PanelContainer/VBoxContainer/MarginContainer/ZoomWidget" method="_on_hide_timer_timeout"]
[connection signal="item_selected" from="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer/AnimationListUI" to="." method="_on_animation_list_ui_item_selected"]
[connection signal="toggled" from="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer/AnimationPlayButton" to="." method="_on_animation_play_button_toggled"]
[connection signal="scrolling" from="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer/PlayBar" to="." method="_on_play_bar_scrolling"]
[connection signal="mode_switched" from="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer/LoopModeButton" to="." method="_on_loop_mode_button_mode_switched"]
[connection signal="pressed" from="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer/LoopModeButton" to="UILayer/AnimationBar/PanelContainer2/MarginContainer/HBoxContainer/LoopModeButton" method="_on_pressed"]
[connection signal="toggled" from="UILayer/MarginContainer/PanelContainer2/SupportPivotDisplay/AxisButton" to="." method="_on_axis_button_toggled"]
[connection signal="toggled" from="UILayer/MarginContainer/PanelContainer2/SupportPivotDisplay/GroundButton" to="." method="_on_ground_button_toggled"]
[connection signal="toggled" from="UILayer/MarginContainer/PanelContainer2/SupportPivotDisplay/BoundingBoxButton" to="." method="_on_bounding_box_button_toggled"]
[connection signal="pressed" from="UILayer/MarginContainer/PanelContainer2/SupportPivotDisplay/ResetViewButton" to="." method="_on_reset_view_button_pressed"]
